# sBayes

./: .dockerignore  .gitignore  Dockerfile  README.md  __main__.py  config_template.yaml  identify_contact_zone7.py  model.py  normal_lh.py  plotting.py  poisson_lh.py  postprocessing.py  preprocessing.py  pyproject.toml  requirements.txt  sbayes_docker.bat  sbayes_docker.sh  setup.py  util.py
.github/workflows/: python-package-macos.yml  python-package.yml  python_package.yml  python_package_macos.yml  update_config_template.yml
data/processed/: feature_prob.pkl  (+4 more)
deprecated/: __old_main__.py  depracated.py  deprecated_functions.py  mcmc_particularity.py  plot_marginal_lh.py  plot_parallel.py  sampling_parameters.py  zone_sampling_particularity.py
docker/: Dockerfile  sbayes.bat  sbayes.sh  sblot.bat  sblot.sh
documentation/: manual.md  user_manual.md
manuscript/: README.md
sampling/: mcmc_generative.py  zone_sampling.py
sbayes/: __init__.py  __main__.py  cli.py  experiment_setup.py  load_data.py  mcmc_setup.py  model.py  plot (copy).py  plot.py  plotting_old.py  postprocessing.py  preprocessing.py  results.py  simulation.py  util.py
src/: __main__.py  __old_main__.py  binomial_test.py  config.py  diffusion.py  experiment_setup.py  load_data.py  mcmc_setup.py  model.py  plotting.py  postprocessing.py  preprocessing.py  simulation.py  testing.py  util.py
test/: config.json  simulation_test.py  test_extract_feature_states.py  test_gaussian_model.py  test_model.py  test_operators.py  test_plot.py  test_sbayes_experiment.py  test_state.py  test_util.py
(+415 files in other folders)
