[build-system]
requires = ["setuptools", "cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbayes"
version = "1.1"
description = "MCMC algorithms to identify spatial cluster in the presence of confounding effects."
authors = [
    {name = "Nico Neureiter", email = "nico.neureiter@uzh.ch"},
    {name = "Peter Ranacher", email = "peter.ranacher@geo.uzh.ch"},
]
readme = "README.md"
keywords = ["Bayesian inference", "clustering", "linguistics"]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "descartes",
    "geopandas",
    "matplotlib",
    "numpy>=1.21",
    "pygeos",
    "pandas",
    "pyproj",
    "scipy",
    "Shapely",
    "seaborn",
    "cartopy",
    "typing_extensions",
    "tables",
    "pydantic>=2",
    "ruamel.yaml",
    "unidecode",
    "psutil",
    "numba",
    "libpysal",
]

[project.optional-dependencies]
modelComparison = ["arviz"]
gui = ["tkinter"]

[project.urls]
Source = "https://github.com/derpetermann/sBayes"
Documentation = "https://github.com/derpetermann/sBayes/blob/devel/documentation/user_manual.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbayes*"]

[tool.setuptools.package-data]
maps = ["*.geojson"]

[project.scripts]
sbayes = "sbayes.cli:cli"
sbayesPlot = "sbayes.plot:cli"
sbayesAlignClusters = "sbayes.tools.align_clusters:main"
sbayesELPD = "sbayes.tools.elpd:cli"
sbayesSubsample = "sbayes.tools.subsample:cli"
